--- a/WS012/index.html
+++ b/WS012/index.html
@@ -104,7 +104,7 @@
             >
         </div>
     </div>
-    <footer class="navbar navbar-dark bg-dark text-center">
+    <footer class="col-12 text-center">
         Otto Kuukkanen 2024
     </footer>
 </body>
